cabal-version:       2.2

name:                facet
version:             0.0.0.0
synopsis:            a typed functional programming language with effects and handlers
description:         a typed functional programming language with algebraic effects and handlers
homepage:            https://github.com/robrix/facet
bug-reports:         https://github.com/robrix/facet/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2020 Rob Rix
category:            Language

tested-with:
  GHC == 8.10.3

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies
  if (impl(ghc >= 8.10))
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  default-extensions:
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DisambiguateRecordFields
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    RankNTypes
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

library
  import: common
  exposed-modules:
    Data.Semialign.Exts
    Facet.Carrier.Error.Lens
    Facet.Carrier.Output.IO
    Facet.Carrier.Parser.Church
    Facet.Carrier.Profile.Flat
    Facet.Carrier.Profile.Identity
    Facet.Carrier.Profile.Tree
    Facet.Carrier.Readline.Haskeline
    Facet.Carrier.State.Lens
    Facet.Carrier.Throw.Inject
    Facet.Carrier.Time.System
    Facet.Carrier.Write.General
    Facet.Carrier.Write.Inject
    Facet.CLI
    Facet.Context
    Facet.Core.Module
    Facet.Core.Term
    Facet.Core.Type
    Facet.Diff
    Facet.Driver
    Facet.Effect.Parser
    Facet.Effect.Profile
    Facet.Effect.Readline
    Facet.Effect.Time
    Facet.Effect.Time.System
    Facet.Effect.Write
    Facet.Elab
    Facet.Elab.Term
    Facet.Elab.Type
    Facet.Eval
    Facet.Flag
    Facet.Format
    Facet.Graph
    Facet.LSP
    Facet.Lens
    Facet.Name
    Facet.Notice
    Facet.Notice.Elab
    Facet.Notice.Parser
    Facet.Lexer
    Facet.Parser
    Facet.Parser.Table
    Facet.Pretty
    Facet.Print
    Facet.REPL
    Facet.REPL.Parser
    Facet.Run
    Facet.Semiring
    Facet.Show
    Facet.Source
    Facet.Span
    Facet.Stack
    Facet.Stack.NonEmpty
    Facet.Style
    Facet.Surface
    Facet.Syntax
    Facet.Timing
    Facet.Vars
  other-modules:
    Paths_facet
  autogen-modules:
    Paths_facet
  build-depends:
    , ansi-terminal
    , base ^>= 4.14
    , charset
    , colour
    , containers
    , data-default
    , directory
    , exceptions ^>= 0.10
    , filepath
    , fused-effects
    , fused-effects-lens
    , haskeline ^>= 0.8.1
    , haskell-lsp
    , haskell-lsp-types
    , lens
    , optparse-applicative
    , parsers
    , prettyprinter
    , semialign
    , silkscreen
    , terminal-size
    , text
    , these
    , time
    , transformers
    , unordered-containers
  hs-source-dirs: src


test-suite test
  import: common
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  other-modules:
    Facet.Carrier.Parser.Church.Test
    Facet.Core.Type.Test
    Facet.Source.Test
  main-is: Test.hs
  build-depends:
    , base
    , containers
    , facet
    , hedgehog ^>= 1
    , parsers


executable facetc
  import: common
  main-is: Main.hs
  hs-source-dirs: facetc
  build-depends:
    , base
    , facet


source-repository head
  type:     git
  location: https://github.com/robrix/facet
