cabal-version:       2.2

name:                facet
version:             0.0.0.0
synopsis:            a typed functional programming language with effects and handlers
description:         a typed functional programming language with algebraic effects and handlers
homepage:            https://github.com/robrix/facet
bug-reports:         https://github.com/robrix/facet/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2020 Rob Rix
category:            Language

tested-with:
  GHC == 8.10.4

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies
  if (impl(ghc >= 8.10))
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if (impl(ghc >= 9.2))
    ghc-options:
      -Wno-missing-kind-signatures
  default-extensions:
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DisambiguateRecordFields
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    RankNTypes
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

library
  import: common
  exposed-modules:
    Facet.Carrier.CallStack.Stack
    Facet.Carrier.Error.Optic
    Facet.Carrier.Output.IO
    Facet.Carrier.Parser.Church
    Facet.Carrier.Profile.Flat
    Facet.Carrier.Profile.Identity
    Facet.Carrier.Profile.Tree
    Facet.Carrier.Readline.Haskeline
    Facet.Carrier.State.Optic
    Facet.Carrier.Throw.Inject
    Facet.Carrier.Time.System
    Facet.Carrier.Write.General
    Facet.Carrier.Write.Inject
    Facet.CLI
    Facet.Context
    Facet.Diff
    Facet.Driver
    Facet.Effect.CallStack
    Facet.Effect.Parser
    Facet.Effect.Profile
    Facet.Effect.Readline
    Facet.Effect.Time
    Facet.Effect.Time.System
    Facet.Effect.Write
    Facet.Elab
    Facet.Elab.Pattern
    Facet.Elab.Sequent
    Facet.Elab.Term
    Facet.Elab.Type
    Facet.Env
    Facet.Eval
    Facet.Flag
    Facet.Format
    Facet.Functor.Check
    Facet.Functor.Compose
    Facet.Functor.Synth
    Facet.Graph
    Facet.Interface
    Facet.Kind
    Facet.Lens
    Facet.Lexer
    Facet.Module
    Facet.Name
    Facet.Notice
    Facet.Notice.Elab
    Facet.Notice.Parser
    Facet.Parser
    Facet.Parser.Table
    Facet.Pattern
    Facet.Pattern.Column
    Facet.Polarized
    Facet.Pretty
    Facet.Print
    Facet.Print.Options
    Facet.Quote
    Facet.REPL
    Facet.REPL.Parser
    Facet.Run
    Facet.Scope
    Facet.Semialign
    Facet.Semiring
    Facet.Sequent.Class
    Facet.Sequent.Expr
    Facet.Sequent.Norm
    Facet.Sequent.Pattern
    Facet.Sequent.Print
    Facet.Sequent.Type
    Facet.Snoc
    Facet.Snoc.NonEmpty
    Facet.Source
    Facet.Source.Reference
    Facet.Span
    Facet.Style
    Facet.Subst
    Facet.Surface.Module
    Facet.Surface.Term.Expr
    Facet.Surface.Type.Class
    Facet.Surface.Type.Expr
    Facet.Syntax
    Facet.Term.Class
    Facet.Term.Expr
    Facet.Term.Norm
    Facet.Timing
    Facet.Type.Class
    Facet.Type.Expr
    Facet.Type.Norm
    Facet.Unify
    Facet.Usage
    Facet.Vars
  other-modules:
    Paths_facet
  autogen-modules:
    Paths_facet
  build-depends:
    , ansi-terminal
    , base >= 4.14 && < 5
    , charset
    , colour
    , containers
    , directory
    , exceptions ^>= 0.10
    , filepath
    , fresnel
    , fused-effects
    , haskeline ^>= 0.8.1
    , optparse-applicative
    , parsers
    , prettyprinter
    , profunctors
    , semialign
    , silkscreen
    , terminal-size
    , text
    , these
    , time
    , transformers
    , unordered-containers
  hs-source-dirs: src


test-suite test
  import: common
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  other-modules:
    Facet.Carrier.Parser.Church.Test
    Facet.Core.Type.Test
    Facet.Source.Test
  main-is: Test.hs
  build-depends:
    , base
    , containers
    , facet
    , hedgehog >= 1 && < 1.2
    , parsers
  if (impl(ghc >= 9.2))
    ghc-options:
      -Wno-missing-signatures


executable facetc
  import: common
  main-is: Main.hs
  hs-source-dirs: facetc
  build-depends:
    , base
    , facet


source-repository head
  type:     git
  location: https://github.com/robrix/facet
